test_project/test_pcks/invalid/VT323-Regular.ttf.import
[remap]

importer="font_data_dynamic"
type="FontFile"
uid="uid://by61tc0tnn2eq"
path="res://.godot/imported/VT323-Regular.ttf-24d9f9cfef2b67170fc0671974233446.fontdata"

[deps]

source_file="res://test_pcks/invalid/VT323-Regular.ttf"
dest_files=["res://.godot/imported/VT323-Regular.ttf-24d9f9cfef2b67170fc0671974233446.fontdata"]

[params]

Rendering=null
antialiasing=1
generate_mipmaps=false
multichannel_signed_distance_field=false
msdf_pixel_range=8
msdf_size=48
allow_system_fallback=true
force_autohinter=false
hinting=1
subpixel_positioning=1
oversampling=0.0
Fallbacks=null
fallbacks=[]
Compress=null
compress=true
preload=[]
language_support={}
script_support={}
opentype_features={}
